[gd_scene load_steps=2 format=3 uid="uid://buqupqwoa110t"]

[ext_resource type="Script" path="res://scripts/join_ui.gd" id="1_6g1gf"]

[node name="JoinUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6g1gf")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 471.0
offset_top = 172.0
offset_right = -471.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HostButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "IP"
alignment = 1

[node name="CheckBox" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Use UPNP?"

[node name="LobbyList" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 709.0
offset_top = 172.0
offset_right = -229.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LobbyList"]
layout_mode = 2

[node name="RefreshLobbies" type="Button" parent="LobbyList/VBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="LobbyContainer" type="ScrollContainer" parent="LobbyList/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Lobbies" type="VBoxContainer" parent="LobbyList/VBoxContainer/LobbyContainer"]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="LobbyList/VBoxContainer/RefreshLobbies" to="." method="_on_refresh_lobbies_pressed"]
